fix: removing edgecases of it looking bad on mobile

--- a/static/ghoulboii.css
+++ b/static/ghoulboii.css
@@ -6,7 +6,6 @@
   box-shadow:unset;
   margin:unset;
   text-align: center !important;
-  white-space: pre-wrap !important;
   animation:flicker 250ms alternate infinite
 }
 @keyframes flicker {
